<resources>
    <string name="app_name">Kalkulator</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_pow">^</string>
    <string name="_6">6</string>
    <string name="_div">/</string>
    <string name="_min">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_per">%</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_plus">+</string>
    <string name="_multi">*</string>
    <string name="_log">LOG</string>
    <string name="_del">DEL</string>
    <string name="_c">C</string>
    <string name="result">Result</string>
    <string name="_l">(</string>
    <string name="_r">)</string>
    <string name="_calc">CALCULATE</string>
</resources>